@@ -1,3 +1,12 @@
+2011-01-06  Patrick Gansterer  <paroga@webkit.org>
+
+        Reviewed by Eric Seidel.
+
+        [WINCE] Remove JSC::g_stackBase
+        https://bugs.webkit.org/show_bug.cgi?id=51779
+
+        * wtf/StackBounds.cpp:
+
 2011-01-06  Joone Hur  <joone.hur@collabora.co.uk>
 
         Reviewed by Eric Seidel.
